--- a/SALESWEB/appsettings.json
+++ b/SALESWEB/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SALESWEBContext": "Server=(localdb)\\mssqllocaldb;Database=SALESWEBContext-40e3895d-f01c-4e6c-9c3e-4c87089d0c94;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
